--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,37 +6,29 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     </head>
     <body ng-app="caronaAll">
-        <header class="well">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-9">
-                        <h1 class="text-center">Sua Carona Aqui!</h1>
-                    </div>
-                    <div class="col-md-3">
-                        <a href="#/teste">Log in!</a>                    
-                    </div>
-                </div>
-            </div>
-        </header>
-        <section class="container">
+        <div class="container">
             <div class="row">
-                <div class="col-md-4">
-                    <h3 class="text-center">explicacao 1</h3>
-                </div>
-                <div class="col-md-4">
-                    <h3 class="text-center">explicacao 2</h3>                
-                </div>
-                <div class="col-md-4">
-                    <h3 class="text-center">explicacao 3</h3>
+                <div class="col-md-12">
+                    <div id="signInButton" class="text-center">
+                        <span class="g-signin" data-scope="openid email" id="g_oauth"
+                              data-clientid="324388598201-gf1cblm4n8m1cf27acg5q1lgrqs0l1dp.apps.googleusercontent.com"
+                              data-redirecturi="postmessage"
+                              data-accesstype="offline"
+                              data-cookiepolicy="single_host_origin"
+                              data-callback="signInCallback" data-approvalprompt="force">
+                        </span>
+                    </div>
+                    <div id="result"></div>
                 </div>
             </div>
-            depois
-        </section>
-        <div ng-view>
-            
         </div>
+        <input type="button" value="Login" id="loginForm">        
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js" type="text/javascript"></script>
+        <script src="js/jquery/jquery-ui.min.js" type="text/javascript"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js" type="text/javascript"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-route.js" type="text/javascript"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-route.js" type="text/javascript"></script>        
+        <script src="https://apis.google.com/js/platform.js?onload=start"></script>
+        <script src="js/jquery/jq.js" type="text/javascript"></script>
         <script src="js/app.js" type="text/javascript"></script>
         <script src="js/route.js" type="text/javascript"></script>
     </body>
