--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,10 +7,22 @@
   </head>
   <body>
 
+    <nav-bar></nav-bar>
+    <h2>que lixo de framework</h2>
+    <div ui-view></div>
+
     <script type="text/javascript" src="vendor/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="vendor/angular/angular.min.js"></script>
     <script type="text/javascript" src="vendor/angular-ui-router/release/angular-ui-router.min.js"></script>
 
     <script type="text/javascript" src="app.js"></script>
+
+    <script type="text/javascript" src="js/components/navbar/controller.js"></script>
+    <script type="text/javascript" src="js/components/navbar/directive.js"></script>
+
+    <script type="text/javascript" src="js/features/login/router.js"></script>
+    <script type="text/javascript" src="js/features/login/controller/loginController.js"></script>
+
+    <script type="text/javascript" src="js/config/config.js"></script>
   </body>
 </html>
