--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <title>Carona para todos!</title>
     <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
 
-    <nav-bar></nav-bar>
-    <h2>que lixo de framework</h2>
+    <nav-bar></nav-bar>    
     <div ui-view></div>
 
     <script type="text/javascript" src="vendor/jquery/dist/jquery.min.js"></script>
@@ -19,9 +19,14 @@
 
     <script type="text/javascript" src="js/components/navbar/controller.js"></script>
     <script type="text/javascript" src="js/components/navbar/directive.js"></script>
+    
+    <script type="text/javascript" src="js/features/services/LoginService.js"></script>
 
     <script type="text/javascript" src="js/features/login/router.js"></script>
     <script type="text/javascript" src="js/features/login/controller/loginController.js"></script>
+    
+    <script type="text/javascript" src="js/features/registro/router.js"></script>
+    <script type="text/javascript" src="js/features/registro/controller/controller.js"></script>
 
     <script type="text/javascript" src="js/config/config.js"></script>
   </body>
